Revision history for Dist::Zilla::Plugin::Git

{{$NEXT}}

1.112060  2011-07-25 10:25:29 Europe/Paris
 - fix rt#66705 - localization of HOME in tests
 - fix rt#69616 & rt#69701 - make dzp-git work with git::wrapper 0.015

1.111590  2011-06-08 09:43:35 Europe/Paris
 - mocks HOME to avoid test failures (david golden)

1.111460  2011-05-26 14:37:08 Europe/Paris
 - fix rt#68474 - Git::NextVersion assumes all tags are version-related (rob@hoelz.ro)

1.110500  2011-02-19 12:43:19 Europe/Paris
 - add 'add_files_in' to Commit so you can commit an entire dir (Apocalypse)
   If you need the same concept for Check please let us know!

1.110480  2011-02-17 18:03:06 Europe/Paris
 - CommitBuild support for release_message (nigel metheringham)
 - Also supports %v & %t format tags, more appropriate for message on
   commit build of the released package (nigel metheringham)

1.110330  2011-02-02 10:36:33 Europe/Paris
 - fix rt#62484 - add a link to Git::NextVersion in main documentation

1.103520  2010-12-18 09:45:57 Europe/Paris
 - fix Commit so %t actually works (christopher madsen)

1.103500  2010-12-16 11:44:32 Europe/Paris
 - add config & remote options to Init (christopher madsen)

1.103470  2010-12-13 17:32:36 Europe/Paris
 - add time_zone option to Tag & Commit (christopher madsen)
   It now defaults to your local time.  Previous versions always used UTC.
 - Tag & Commit accept %t to indicate trial release status (christopher madsen)
 - NextVersion resets $/ to guard against misbehaving plugins (alan young)

1.102810  2010-10-08 18:01:32 Europe/Paris
 - add Git::NextVersion adapted from BumpVersionFromGit (dagolden)

1.102430  2010-08-31 17:12:24 Europe/Paris
 - fix rt#60740 - allow retrieval of applied tag in git (matt follett)

1.102380  2010-08-26 09:39:33 Europe/Paris
 - fix hang on windows (alexandr ciornii)

1.102090  2010-07-28 14:12:20 Europe/Paris
 - initialize a working git config in all tests

1.102040  2010-07-23 10:45:23 Europe/Paris