@@ -39,6 +39,8 @@ $zilla = _new_zilla;
 # enter the temp source dir and make it a git dir
 my $wd = pushd( $zilla->tempdir->subdir('source')->stringify );
 
+system "git config --global user.name 'dzp-git test'";
+system "git config --global user.name 'dzp-git\@test'";
 system "git init";
 my $git   = Git::Wrapper->new('.');
 $git->add(".");
